Fixing JSON schema in swagger
